--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         <h1>Weather Dashboard</h1>
 
         <!--Trying to edit state displayed on top left of page -->
-        <div id="state">State: </div>
         <div id="search">
              <!--Button for user to look up city and state-->
             <input type="text" id="cityInput" placeholder="Enter City">
@@ -28,6 +27,8 @@
         <div id="cityName">City: </div>
         <div id="temperature">Temperature: </div>
         <div id="weatherDescription">Descripton: </div>
+        <button id="forecastButton">Upcoming Forecast</button>
+        <section id="forecastDisplay"></section>
     </section>
 
     <!-- Rest of weather app content goes here -->
